--- a/Codes/images_matching2.ipynb
+++ b/Codes/images_matching2.ipynb
@@ -4,42 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Keypoint(Patch) Description\n",
-    "<a id='top_cell'></a>  \n",
-    "This project will be all about defining and training a convolutional neural network to perform keypoint  description. \n",
-    "PyTorch tutorials are available at here: [pytorch tutorials](https://github.com/yunjey/pytorch-tutorial)\n",
-    "\n",
-    "Today we will go through:\n",
-    "### 1. [Load and visualize the data](#load_data_cell)\n",
-    "### 2. [Build an example deep network](#build_network_cell)\n",
-    "### 3. [Train the deep network](#train_network_cell)\n",
-    "### 4. [Generate deep features](#generate_deep_features_cell)\n",
-    "\n",
-    "***\n",
-    "\n",
-    "We will use below dataset in this project:\n",
-    "###  [The Photo Tourism dataset ](http://phototour.cs.washington.edu/patches/default.htm)\n",
-    "\n",
-    "It is also available in PyTorch torchvision datasets: [pytorch version](https://pytorch.org/docs/stable/_modules/torchvision/datasets/phototour.html#PhotoTour)\n",
-    "\n",
-    "This dataset consists of 1024 x 1024 bitmap (.bmp) images, each containing a 16 x 16 array of image patches. Here are some examples:\n",
-    "\n",
-    "<table><tr><td><img src='images/patches0001.bmp' width=68% ></td><td><img src='images/patches1482.bmp' width=68%></td></tr></table>    \n",
-    "For details of how the scale and orientation is established, please see the paper:  \n",
-    "<p class=\"style8\"><font size=\"2\">S. Winder and M. Brown. <strong>Learning Local Image \n",
-    "\t\t\t\tDescriptors</strong>. To appear <i>International Conference on \n",
-    "\t\t\t\tComputer Vision and Pattern Recognition (CVPR2007)</i> (</font><a href=\"http://research.microsoft.com/~swinder/papers/winder_brown_cvpr07.pdf\"><span class=\"style9\">pdf \n",
-    "\t\t\t\t300Kb</span></a><font size=\"2\">)</font></p>\n",
-    "\n",
-    "\n",
-    "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Import packages"
    ]
   },
@@ -320,17 +284,9 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
     "---\n",
     "<a id='build_network_cell'></a>\n",
     "## Build an exmaple deep network  \n",
@@ -435,33 +391,9 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
     "---\n",
     "<a id='generate_deep_features_cell'></a>\n",
     "## Generate deep features\n",
@@ -549,7 +481,7 @@
     }
    ],
    "source": [
-    "patches_dir = \"Hw2/Images_patches.pth\"            # these patches are from keypoint detection results\n",
+    "patches_dir = \"cd ../My_Results/Query_Images_Matching/Images_patches.pth\"            # these patches are from keypoint detection results\n",
     "patches = torch.load(patches_dir)\n",
     "\n",
     "print(patches.shape)                  # in your case, the shape should be [10, 200, 1, 32, 32]\n",
@@ -595,8 +527,8 @@
    "outputs": [],
    "source": [
     "# save to file, with the name of *_features_CNN*.pth\n",
-    "features_dir = \"Hw2/Images_features_CNN1.pth\"\n",
-    "#features_dir = \"Hw2/Images_features_class_CNN3.pth\"\n",
+    "features_dir = \"cd ../My_Results/Query_Images_Matching/Images_features_CNN1.pth\"\n",
+    "#features_dir = \"cd ../My_Results/Query_Images_Matching/Images_features_class_CNN3.pth\"\n",
     "torch.save(features, features_dir)"
    ]
   },
@@ -615,12 +547,12 @@
     }
    ],
    "source": [
-    "patches_dir = \"Hw2/Images_features_CNN1.pth\" \n",
-    "#patches_dir = \"Hw2/Images_features_class_CNN3.pth\"            # these patches are from keypoint detection results\n",
+    "patches_dir = \"cd ../My_Results/Query_Images_Matching/Images_features_CNN1.pth\" \n",
+    "#patches_dir = \"cd ../My_Results/Query_Images_Matching/Images_features_class_CNN3.pth\"            # these patches are from keypoint detection results\n",
     "features_Images = torch.load(patches_dir)\n",
     "\n",
-    "patches_dir = \"Hw2/Query_features_CNN1.pth\" \n",
-    "#patches_dir = \"Hw2/Query_features_class_CNN3.pth\" \n",
+    "patches_dir = \"cd ../My_Results/Query_Images_Matching/Query_features_CNN1.pth\" \n",
+    "#patches_dir = \"cd ../My_Results/Query_Images_Matching/Query_features_class_CNN3.pth\" \n",
     "features_Query = torch.load(patches_dir)\n",
     "\n",
     "print(features_Images.shape)\n",
@@ -708,20 +640,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
@@ -738,77 +656,6 @@
    "source": [
     "Class_CNN_one_to_one_match = onetoone(features_Query, features_Images)\n",
     "Class_CNN_many_to_many_match = manytomany(features_Query,features_Images, 0.072)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[14.56645739 14.04885882 13.51514792 ...  3.6626125   3.58839577\n",
-      "   6.49759161]\n",
-      " [ 8.95349592  7.29209548  6.16056126 ...  6.35705376  9.13467175\n",
-      "   6.83155906]\n",
-      " [ 8.35182863  8.46824199  8.25339073 ...  7.78132105  8.23193669\n",
-      "  10.10796839]\n",
-      " ...\n",
-      " [ 8.42697036  9.16479039  9.57609785 ...  5.27645582  2.18597549\n",
-      "   6.70704353]\n",
-      " [ 8.17721921  8.33487839  8.88144207 ...  6.46836996  6.68150651\n",
-      "   7.99863952]\n",
-      " [ 3.9529438   3.50869364  3.55378795 ... 10.26110089 11.33923626\n",
-      "   9.26212895]]\n",
-      "[[70.01556396 67.33731079 55.52961349 ... 14.43108368  3.11550856\n",
-      "  17.97827721]\n",
-      " [38.27606201 26.00609207 24.09695435 ... 21.73810387 56.17092133\n",
-      "  24.0947876 ]\n",
-      " [36.20726013 37.34459686 34.6930542  ... 27.88594437 31.45701408\n",
-      "  26.24356079]\n",
-      " ...\n",
-      " [34.58694077 39.43255615 48.94757462 ... 16.09321022  8.04718113\n",
-      "  20.71003532]\n",
-      " [31.71372604 31.1531601  35.96695328 ... 21.6979351  16.3176918\n",
-      "  21.8795948 ]\n",
-      " [ 4.41961956  6.42295074  4.23182964 ... 33.30474472 66.27648926\n",
-      "  21.29030609]]\n",
-      "[[12.84781688 12.34827054 11.13495606 ...  1.74999815  1.84013945\n",
-      "   2.84305531]\n",
-      " [ 5.43247765  5.0852496   4.28190565 ...  4.22379059  6.75863254\n",
-      "   4.34247464]\n",
-      " [ 4.96475106  5.05502838  4.80411094 ...  4.83080906  4.46879226\n",
-      "   5.19693661]\n",
-      " ...\n",
-      " [ 3.67180443  3.42231083  3.26674336 ...  4.52758211  3.56958556\n",
-      "   4.42033356]\n",
-      " [ 3.17516822  3.13744378  3.18161327 ...  4.20853466  4.29058385\n",
-      "   4.87223339]\n",
-      " [ 2.11272591  2.20560998  1.87768304 ...  8.10546666  9.03669095\n",
-      "   5.99262637]]\n",
-      "[[54.94814682 49.65885925 43.39214706 ...  5.2998476   5.83444309\n",
-      "   7.06222248]\n",
-      " [19.09688187 16.59911346 13.01546097 ... 12.44078827 40.10110474\n",
-      "  13.71834087]\n",
-      " [15.97013283 19.16454315 18.51675797 ... 18.90492821 17.71614647\n",
-      "  14.9080925 ]\n",
-      " ...\n",
-      " [14.46895981 11.06453991 11.88620663 ... 17.76514244 15.13380718\n",
-      "  16.98770905]\n",
-      " [11.96338081  8.90481853 10.14943695 ... 14.51511478 18.06370354\n",
-      "  14.81122303]\n",
-      " [ 4.98198128  6.54551888  4.13031054 ... 26.63555527 39.15530777\n",
-      "  17.27101898]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(My_CNN_one_to_one_match)\n",
-    "print(My_CNN_many_to_many_match)\n",
-    "print(Class_CNN_one_to_one_match)\n",
-    "print(Class_CNN_many_to_many_match)"
    ]
   },
   {
@@ -844,7 +691,7 @@
     "all_retrieval_matrix = torch.stack(final_retrieval, dim=0)\n",
     "print(all_retrieval_matrix.shape)\n",
     "\n",
-    "retrieval_pth = \"Hw2/retrieval.pth\" \n",
+    "retrieval_pth = \"cd ../My_Results/Query_Images_Matching/retrieval.pth\" \n",
     "torch.save(all_retrieval_matrix,retrieval_pth)"
    ]
   },
@@ -902,218 +749,9 @@
    "source": [
     "T = torch.cat((features_Query, features_Images))\n",
     "print(T.shape)\n",
-    "filename = \"Hw2/features1.pth\" #feature1 is my CNN, feature2 is class CNN\n",
+    "filename = \"cd ../My_Results/Query_Images_Matching/features1.pth\" #feature1 is my CNN, feature2 is class CNN\n",
     "torch.save(T,filename)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5882352941176471\n",
-      "0.5294117647058824\n",
-      "0.45098039215686275\n",
-      "0.40441176470588236\n",
-      "-------\n",
-      "0.14705882352941177\n",
-      "0.2647058823529412\n",
-      "0.3382352941176471\n",
-      "0.40441176470588236\n",
-      "-------\n",
-      "0.29411764705882354\n",
-      "0.20588235294117646\n",
-      "0.196078431372549\n",
-      "0.19852941176470587\n",
-      "-------\n",
-      "0.07352941176470588\n",
-      "0.10294117647058823\n",
-      "0.14705882352941177\n",
-      "0.19852941176470587\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(Precision(My_CNN_one_to_one_match,1))\n",
-    "print(Precision(My_CNN_one_to_one_match,2))\n",
-    "print(Precision(My_CNN_one_to_one_match,3))\n",
-    "print(Precision(My_CNN_one_to_one_match,4))\n",
-    "print('-------')\n",
-    "print(Recall(My_CNN_one_to_one_match,1))\n",
-    "print(Recall(My_CNN_one_to_one_match,2))\n",
-    "print(Recall(My_CNN_one_to_one_match,3))\n",
-    "print(Recall(My_CNN_one_to_one_match,4))\n",
-    "print('-------')\n",
-    "print(Precision(My_CNN_many_to_many_match,1))\n",
-    "print(Precision(My_CNN_many_to_many_match,2))\n",
-    "print(Precision(My_CNN_many_to_many_match,3))\n",
-    "print(Precision(My_CNN_many_to_many_match,4))\n",
-    "print('-------')\n",
-    "print(Recall(My_CNN_many_to_many_match,1))\n",
-    "print(Recall(My_CNN_many_to_many_match,2))\n",
-    "print(Recall(My_CNN_many_to_many_match,3))\n",
-    "print(Recall(My_CNN_many_to_many_match,4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9705882352941176\n",
-      "0.8823529411764706\n",
-      "0.7549019607843137\n",
-      "0.6764705882352942\n",
-      "-------\n",
-      "0.2426470588235294\n",
-      "0.4411764705882353\n",
-      "0.5661764705882353\n",
-      "0.6764705882352942\n",
-      "-------\n",
-      "0.7352941176470589\n",
-      "0.5588235294117647\n",
-      "0.45098039215686275\n",
-      "0.4264705882352941\n",
-      "-------\n",
-      "0.18382352941176472\n",
-      "0.27941176470588236\n",
-      "0.3382352941176471\n",
-      "0.4264705882352941\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(Precision(Class_CNN_one_to_one_match,1))\n",
-    "print(Precision(Class_CNN_one_to_one_match,2))\n",
-    "print(Precision(Class_CNN_one_to_one_match,3))\n",
-    "print(Precision(Class_CNN_one_to_one_match,4))\n",
-    "print('-------')\n",
-    "print(Recall(Class_CNN_one_to_one_match,1))\n",
-    "print(Recall(Class_CNN_one_to_one_match,2))\n",
-    "print(Recall(Class_CNN_one_to_one_match,3))\n",
-    "print(Recall(Class_CNN_one_to_one_match,4))\n",
-    "print('-------')\n",
-    "print(Precision(Class_CNN_many_to_many_match,1))\n",
-    "print(Precision(Class_CNN_many_to_many_match,2))\n",
-    "print(Precision(Class_CNN_many_to_many_match,3))\n",
-    "print(Precision(Class_CNN_many_to_many_match,4))\n",
-    "print('-------')\n",
-    "print(Recall(Class_CNN_many_to_many_match,1))\n",
-    "print(Recall(Class_CNN_many_to_many_match,2))\n",
-    "print(Recall(Class_CNN_many_to_many_match,3))\n",
-    "print(Recall(Class_CNN_many_to_many_match,4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 0]\n",
-      "[0 1 2]\n",
-      "(array([0, 1, 2]), array([1, 2, 0]))\n",
-      "[1 5 3]\n",
-      "9\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([4, 34, 4])\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([0, 1, 2, 3])\n",
-      "tensor([ 4,  6, 55, 54])\n",
-      "tensor([109,  89,  87,  57])\n",
-      "tensor([ 13,  12, 127, 119])\n",
-      "tensor([ 16,  40, 107,  99])\n",
-      "tensor([29, 22, 99, 31])\n",
-      "tensor([52, 53, 72, 55])\n",
-      "tensor([ 28,  30, 114, 113])\n",
-      "tensor([109,  34,  89,  87])\n",
-      "tensor([ 36,  99, 107,  29])\n",
-      "tensor([42, 40, 41, 43])\n",
-      "tensor([ 57,  56,  46, 102])\n",
-      "tensor([116,  72,  94,  62])\n",
-      "tensor([55, 54,  6,  4])\n",
-      "tensor([109,  98,  56, 107])\n",
-      "tensor([61, 60, 63, 62])\n",
-      "tensor([66, 64, 67, 41])\n",
-      "tensor([ 69, 101, 100, 103])\n",
-      "tensor([72, 95, 73, 61])\n",
-      "tensor([76, 22, 21, 94])\n",
-      "tensor([91, 46, 83, 90])\n",
-      "tensor([135, 133, 132,  84])\n",
-      "tensor([89, 72, 90, 75])\n",
-      "tensor([75, 74, 76, 72])\n",
-      "tensor([ 97, 122, 123,  37])\n",
-      "tensor([100, 101, 103, 102])\n",
-      "tensor([ 43,   4,  55, 107])\n",
-      "tensor([42, 41, 43, 66])\n",
-      "tensor([112, 114, 110, 113])\n",
-      "tensor([119, 116,  40,   4])\n",
-      "tensor([122,  41,  21,  43])\n",
-      "tensor([ 14, 125, 116, 124])\n",
-      "tensor([ 87, 129, 108, 128])\n",
-      "tensor([132, 134,  83,  58])\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
