--- a/Codes/images_matching1.ipynb
+++ b/Codes/images_matching1.ipynb
@@ -4,17 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Keypoint Detection\n",
-    "---\n",
-    "There are 10 images given in the ***img*** folder. Your task is to detect ***200*** keypoints for each of them using detectors.\n",
-    "\n",
-    "Below are the tutorials about SIFT and Harris corners:\n",
-    "\n",
-    "SIFT: https://docs.opencv.org/3.4/da/df5/tutorial_py_sift_intro.html\n",
-    "\n",
-    "Harris corners: https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_feature2d/py_features_harris/py_features_harris.html#harris-corners\n",
-    "\n",
-    "Let's take a look at these images first!\n",
+    "Detect 20 strongest SIFT keypoints in the image\n",
+    "Extract 20 image patches of size 32x32 pixels, centered at the detected SIFT keypoints, from the image\n",
     "\n",
     "---"
    ]
@@ -23,16 +14,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/scratch/kaowe/miniconda3/envs/hw1/lib/python3.6/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load packages\n",
     "import cv2\n",
@@ -132,33 +114,6 @@
     "else:\n",
     "    print(\"image folder not exists!\")\n",
     "    exit(0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### The Keypoints:\n",
-    "The output of this part is a list of keypoints that represented by the x and y cooridnates.\n",
-    "\n",
-    "For example, the 10 points of image ***3.jpg*** are:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "#keypoints = list([(10.0, 10),  (16.0, 15.5), (15, 16), (1585, 16), (15, 1024), (100, 106), (150, 160), (715, 716), (315, 916), (815, 640)])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then we can obtain the patches with these keypoints:\n"
    ]
   },
   {
@@ -303,7 +258,7 @@
     "\n",
     "\n",
     "all_patches = torch.stack(all_patches, dim=0)\n",
-    "output_dir2 = \"Hw2/Query_patches.pth\"         # modify it to SIFT.pth or Harris.pth\n",
+    "output_dir2 = \"cd .. My_Results/Query_Images_Matching/Query_patches.pth\"         # modify it to SIFT.pth or Harris.pth\n",
     "torch.save(all_patches, output_dir2)"
    ]
   },
@@ -334,44 +289,12 @@
     "#print(type(test_coordinates))\n",
     "#print(test_coordinates.shape)\n",
     "\n",
-    "\n",
     "test_patches = torch.load(output_dir2)\n",
     "print(type(test_patches))\n",
     "print(test_patches.shape)\n",
     "print(len(test_patches))\n",
     "# your tensor for each should have size of [10, 200, 1, 32, 32];where 10 means 10 images (in the order 1-10), 200 means 200 points."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = cv2.imread('Hw2/Query_features_CNN1.pth')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
