--- a/Codes/images_matching1.ipynb
+++ b/Codes/images_matching1.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Detect 20 strongest SIFT keypoints in the image\n",
-    "Extract 20 image patches of size 32x32 pixels, centered at the detected SIFT keypoints, from the image\n",
+    "### Image retrieval by matching keypoints\n"
+    "### Detect 20 strongest SIFT keypoints in the image.\n",
+    "### Extract 20 image patches of size 32x32 pixels, centered at the detected SIFT keypoints, from the image\n",
     "\n",
     "---"
    ]
