--- a/Codes/images_matching1.ipynb
+++ b/Codes/images_matching1.ipynb
@@ -77,7 +77,7 @@
     }
    ],
    "source": [
-    "img_dir = \"images_retrieval/query\"\n",
+    "img_dir = \"cd ../data/images_retrieval/query\"\n",
     "total_images = 0\n",
     "all_kp_s = []\n",
     "all_kp_h = []\n",
