--- a/Codes/keypoint_CNN_training.ipynb
+++ b/Codes/keypoint_CNN_training.ipynb
@@ -834,6 +834,8 @@
     "ax0 = fig.add_subplot(121, title=\"training loss\")\n",
     "ax1 = fig.add_subplot(122, title=\"validation loss\")\n",
     "\n",
+    "for i in range(60):\n",
+    "    draw_curve()\n",
    ]
   },
   {
